# PENTrack

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  batch.pbs  cmake_install.cmake  doxygen.config
analysis/penanalyse/: penanalyse.py
analysis/penplot/: penplot.py  penplot.py~
in/: .materials.in.swp  MagpyField.py  SF1_filling.stl  SF2.py  SF2.py.bak  SF2_filling.stl  aSPECT_tube1.stl  coil.py  config-beamline.in  config-flipspin3.in  config-sf2-BS.in  config-sf2-analytic.in  config.in  config_PolishedSteel.in  config_nimo.in  config_octupoleonly_lfshfs.in  config_sf1.in  config_sf2.in  config_source.in  cryostat.stl  detector_foil1.stl  detector_zclean1854.stl  detector_zclean_1864.stl  detector_zcount.stl  detector_zstorage.stl  magpytest.py  materials.in  octupole.py  octupole1.stl  pythonField.py
in/CAD/: Beam_line_experimental_1_meters.stl  bl1.stl  halbach.stl  joined.stl  quartz_fill_joined.stl  quartz_fill_joined_beamguide.stl  stabilisation_tubes.stl  statistics.stl  total.stl  untitled.stl
in/CAD/clean/: foil_clean.stl
in/CAD/count/: detector_count.stl  foil_count.stl
in/CAD/fill/: SF_copper_fill.stl  SF_quartztube_fill.stl  SF_tube_fill.stl
in/CAD/fill1/: det.stl  horizontal_beamline.stl  static_beamline.stl
in/CAD/fill10/: deckelflansch.stl  mirror_tubes.stl  start coordinates.txt  ucnmirror.stl
in/CAD/fill10/shifted/: deckelflansch.stl  mirror_tubes.stl  spiegel.stl  static_beamline.stl  ucnmirror.stl
in/CAD/fill11/: beamport_flange.stl  start coords.txt
in/CAD/fill11/shifted/: beamport_flange.stl  spinflipper.stl
in/CAD/fill12/: README.txt  linear_beamline.stl
in/CAD/fill12/shifted/: beamport_flange.stl  linear_beamline.stl  simdet.stl
in/CAD/fill14/: quartz_det.stl
in/CAD/fill14/shifted/: deckel_flansch.stl  quartz_tube.stl
in/CAD/fill14/shifted1/: deckel_flansch.stl  quartz_tube.stl  sim_det.stl  spinflipper.stl
in/CAD/fill14/shifted2/: mirror_box.stl  quartz_tube.stl  sim_det.stl  ucnmirror.stl
in/CAD/fill15/: README.txt  beamport_flange.stl  deckel_flansch.stl  det_0.stl  det_900.stl
in/CAD/fill15/shifted/: SF.stl  beamport_flange.stl  deckel_flansch.stl  det_0.stl  det_900.stl  mirror_tubes.stl  mirrors.stl  quartz_tube.stl  spiegel.stl  static_beamline.stl
in/CAD/fill2/: det.stl  horizontal_beamline.stl  static_beamline.stl
in/CAD/fill6/: ar_det.stl  br_det.stl  enddet.stl  mirrorholders.stl  mirrors.stl  mirrortubes.stl
in/CAD/fill7/: deckelflansch.stl  static_beamline.stl
in/CAD/fill7/shifted/: deckelflansch.stl  mirror_tubes.stl  simdet.stl  spiegel.stl
in/CAD/fill8/: spiegel.stl
in/CAD/fill8/shifted/: mirror_tubes.stl  simdet.stl  spiegel.stl  static_beamline.stl  ucnmirror.stl
in/CAD/fill9/: deckelflansch.stl  details.txt  spiegel.stl  ucnmirror.stl
in/CAD/fill9/shifted/: ucnmirror.stl
in/CAD/horizontal_tube/: Detector.stl  README.txt  Tube_m.stl
in/CAD/start/: BodyWithoutMirrors_meters.stl  DekelFlansch.stl  DekelFlansch_m.stl  Mirrors_meters.stl  Spiegel.stl  Spiegel_m.stl  tubes.stl  tubes_m.stl  ucnmirror.stl  ucnmirror_m.stl
in/CAD/store/: SF_tube_store.stl
in/STLs/: detector_clean_translated.stl
in/STLs/beamlines/fill10/: details.txt  spiegel.stl
in/STLs/beamlines/fill10/shifted/: simdet.stl
in/STLs/beamlines/fill11/: 45deg_bent_beamline.stl
in/STLs/beamlines/fill11/shifted/: 45deg_bent_beamline.stl  README.txt  quartz_det.stl  quartz_tube.stl  start.txt  static_beamline.stl
in/STLs/beamlines/fill12/: beamport_flange.stl  spinflipper.stl  start.txt  static_beamguide.stl
in/STLs/beamlines/fill12/shifted/: quartz_det.stl  quartz_tube.stl  spinflipper.stl  static_beamguide.stl  static_beamline.stl
in/STLs/beamlines/fill14/: mirror_tubes.stl  sim_det.stl
in/STLs/beamlines/fill14/shifted/: beamport_flange.stl  mirror_box.stl  mirror_tubes.stl  quartz_det.stl  spinflipper.stl  static_beamline.stl  ucnmirror.stl
in/STLs/beamlines/fill14/shifted1/: beamport_flange.stl  mirror_box.stl  mirror_tubes.stl  static_beamline.stl  ucnmirror.stl
in/STLs/beamlines/fill14/shifted2/: beamport_flange.stl  deckel_flansch.stl  mirror_tubes.stl  spinflipper.stl  static_beamline.stl
in/STLs/beamlines/fill15/: README.txt  mirrors.stl  quartz_tube.stl  spiegel.stl
in/STLs/beamlines/fill15/shifted/: det_900.stl  spiegel.stl
in/STLs/beamlines/fill7/: mirror_tubes.stl  spiegel.stl  ucnmirror.stl
in/STLs/beamlines/fill7/shifted/: static_beamline.stl  ucnmirror.stl
in/STLs/beamlines/fill8/: deckelflansch.stl  mirror_tubes.stl  ucnmirror.stl
in/STLs/beamlines/fill8/shifted/: deckelflansch.stl
in/STLs/beamlines/fill9/: mirror_tubes.stl  start coordinates.txt
in/STLs/beamlines/fill9/shifted/: deckelflansch.stl  mirror_tubes.stl  simdet.stl  spiegel.stl  static_beamline.stl
in/STLs/store/: SF_copper_store.stl  SF_quartztube1_store.stl  SF_quartztube_store.stl  detector_store.stl  foil_store1.stl
in/STLs/tSPECT/clean/: detector_clean.stl
in/STLs/tSPECT/fill/: SF_quartztube1_fill.stl  SF_seperation_foil_fill.stl
in/STLs/tSPECT/store/: SF_seperation_foil_store.stl  foil_store.stl
in/configs/spinflip/: config-sf2-BS.in
in/fields/: Bfield_octupole_xmin-1200_xmax2800_hx100_yzmax60_hyz10.txt~
in/fields/python/: coil.py  octupole.py  pythonField.py~
in/fields/spinflip/: SF1.1.txt  SF1.1.txt~  SF1.2.txt  SF1.2.txt~  SF2.1-k10.txt  SF2.1-k4.txt  SF2.2-k10.txt  SF2.2-k4.txt  SF2.py
include/: analyticFields.h  ecurrentFields.h  field_3d.h  globals.h  logger.h  mc.h  pythonFields.h  source.h  tracking.h
src/: .field_3d.cpp.swp  MagpyField.py  analyticFields.cpp  ecurrentFields.cpp  field_3d.cpp  fields.cpp  globals.cpp  logger.cpp  main.cpp  mc.cpp  neutron.cpp  particle.cpp  pythonFields.cpp  source.cpp  tracking.cpp
test/comsolFieldTest/: BFCut.out  config.in
